# xplorts

./: LICENSE  README.md  pyproject.toml
data/: oph 2022Q4.csv  oph 2023Q1.csv  oph 2023Q1.html  oph annual bespoke.csv  oph annual by division.csv  oph annual by section.csv  oph quarterly by section.csv  outputperhourworked 2023Q1.xlsx  outputperhourworked.xls
docs/html/: xplor_lprod oph annual by section.html  xplor_lprod oph quarterly by section.html
src/xplorts/: __init__.py  base.py  bokeh_stacks.py  dutils.py  ghostbokeh.py  growthcomps.py  lines.py  scatter.py  slideselect.py  snapcomp.py  stacks.py  stacks_datetime.py  stacks_util.py  tscomp.py  xplor_lprod.py
src/xplorts/dashboard/: __init__.py  __main__.py  xpdashboard.py
src/xplorts/dblprod/: __init__.py  __main__.py  dblprod.py  prodgrowsnap.py  prodgrowts.py  prodlines.py  xpdblprod.py
src/xplorts/diff/: __init__.py  __main__.py  diff.py  xpdiff.py
src/xplorts/heatmap/: __init__.py  __main__.py  heatmap.py  xpheatmap.py
src/xplorts/lines/: __init__.py  __main__.py  lines.py  xplines.py
src/xplorts/scatter/: __init__.py  __main__.py  scatter.py  xpscatter.py
src/xplorts/snapcomp/: __init__.py  __main__.py  snapcomp.py  xpsnapcomp.py
src/xplorts/stacks/: __init__.py  __main__.py  bokeh_stacks.py  stacks.py  stacks_util.py  xpstacks.py
src/xplorts/tscomp/: __init__.py  __main__.py  tscomp.py  xptscomp.py
src/xplorts/utils/: ukons_lcli_to_csv.py  ukons_lprod_to_csv.py  ukons_psp_to_csv.py
tests/: conftest.py  test_dashboard.py  test_dblprod.py  test_diff.py  test_heatmap.py  test_lines.py  test_scatter.py  test_snapcomp.py  test_stacks.py  test_tscomp.py  test_xplor_lprod.py
