[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xplorts"
version = "1.2"
authors = [
  { name="Todd M Bailey", email="tmb@baileywick.plus.com" }
]
description = "Make standalone interactive HTML charts to explore time series datasets"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "bokeh >= 2.3.2",
    "numpy >= 1.19.2",
    "pandas >= 1.1.5",
    "pyyaml >= 5.4.1",
    "xlrd >= 2.0.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    'Development Status :: 3 - Alpha'
]

[project.scripts]
xp-dashboard = "xplorts.dashboard.xpdashboard:main"
xp-dblprod = "xplorts.dblprod.xpdblprod:main"
xp-diff = "xplorts.diff.xpdiff:main"
xp-heatmap = "xplorts.heatmap.xpheatmap:main"
xp-lines = "xplorts.lines.xplines:main"
xp-scatter = "xplorts.scatter.xpscatter:main"
xp-snapcomp = "xplorts.snapcomp.xpsnapcomp:main"
xp-stacks = "xplorts.stacks.xpstacks:main"
xp-tscomp = "xplorts.tscomp.xptscomp:main"

[project.urls]
"Homepage" = "https://github.com/xplorts/xplorts"
"Bug Tracker" = "https://github.com/xplorts/xplorts/issues"

[tool.hatch.build]
exclude = [
  "zz *",
  "data/*.html"
]